--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
     @media (max-width: 600px) {
       .hero h1 { font-size: 1.6em; }
     }
+    /* Remove blue tap highlight color on mobile */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
   </style>
 </head>
 <body>
