--- a/register.html
+++ b/register.html
@@ -2,108 +2,249 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Loyalty Points Registration</title>
+  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>King's Cut Barbershop | Personal Barber</title>
   <style>
     * {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-      -webkit-tap-highlight-color: transparent;
+      font-family: sans-serif;
     }
 
     body {
-      background: #f5f5f5;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
+      background: #f4f4f4;
+      color: #222;
+      overflow-x: hidden;
     }
 
-    h1 {
-      margin-bottom: 20px;
-      color: #1e1e2f;
-    }
-
-    form {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-      font-size: 0.95em;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1em;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #8e2de2;
-      color: white;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background: #6c1bb8;
-    }
-
-    .login-link {
+    header {
+      background: #111;
+      color: #fff;
+      padding: 20px;
       text-align: center;
-      margin-top: 20px;
-      font-size: 0.9em;
     }
 
-    .login-link a {
-      color: #8e2de2;
+    nav {
+      display: flex;
+      overflow-x: auto;
+      background: #222;
+    }
+
+    nav a {
+      flex: 1 0 auto;
+      padding: 15px;
+      color: #fff;
       text-decoration: none;
-      font-weight: bold;
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    nav a:hover {
+      background: #444;
+    }
+
+    .hero {
+      padding: 40px 20px;
+      text-align: center;
+      background: linear-gradient(#222, #333);
+      color: white;
+    }
+
+    .hero h1 {
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 1.1em;
+    }
+
+    .ads {
+      position: relative;
+      overflow: hidden;
+      max-width: 100%;
+    }
+
+    .ads-container {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+      width: 300%;
+    }
+
+    .ad-slide {
+      min-width: 100%;
+      padding: 40px 20px;
+      background: #ddd;
+      text-align: center;
+    }
+
+    .dots {
+      display: flex;
+      justify-content: center;
+      margin: 10px 0;
+    }
+
+    .dot {
+      height: 12px;
+      width: 12px;
+      margin: 0 5px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      cursor: pointer;
+    }
+
+    .dot.active {
+      background-color: #333;
+    }
+
+    .register {
+      padding: 30px 20px;
+      background: #fff;
+    }
+
+    .register h2 {
+      margin-bottom: 20px;
+    }
+
+    .register input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .register button {
+      padding: 12px;
+      width: 100%;
+      background: #222;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+
+    .privacy-popup {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      right: 10px;
+      background: #222;
+      color: white;
+      padding: 15px;
+      border-radius: 8px;
+      z-index: 999;
+      display: none;
+    }
+
+    .privacy-popup.show {
+      display: block;
+    }
+
+    .privacy-popup button {
+      background: #fff;
+      color: #222;
+      border: none;
+      padding: 5px 10px;
+      margin-left: 10px;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>King's Cut Barbershop</h1>
+    <p>Your Personal Barber, Anytime</p>
+  </header>
 
-  <h1>Join Our Loyalty Program</h1>
+  <nav>
+    <a href="#hero">Home</a>
+    <a href="#ads">Promos</a>
+    <a href="#register">Loyalty</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-  <form action="submit-loyalty.php" method="POST">
-    <label for="name">Full Name</label>
-    <input type="text" id="name" name="name" required />
+  <section class="hero" id="hero">
+    <h1>Fresh Cuts Delivered</h1>
+    <p>We come to you — mobile barber services at your convenience.</p>
+  </section>
 
-    <label for="phone">Phone Number</label>
-    <input type="tel" id="phone" name="phone" required pattern="[0-9]{10}" />
+  <section class="ads" id="ads">
+    <div class="ads-container" id="adsContainer">
+      <div class="ad-slide">🔥 20% OFF First Cut</div>
+      <div class="ad-slide">💈 Refer a Friend = Free Trim</div>
+      <div class="ad-slide">🎉 Loyalty Points = Rewards</div>
+    </div>
+    <div class="dots">
+      <span class="dot active" onclick="setSlide(0)"></span>
+      <span class="dot" onclick="setSlide(1)"></span>
+      <span class="dot" onclick="setSlide(2)"></span>
+    </div>
+  </section>
 
-    <label for="email">Email Address</label>
-    <input type="email" id="email" name="email" required />
+  <section class="register" id="register">
+    <h2>Loyalty Points Registration</h2>
+    <form onsubmit="registerClient(event)">
+      <input type="text" id="name" placeholder="Your Full Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address (optional)" />
+      <button type="submit">Register</button>
+    </form>
+  </section>
 
-    <label for="password">Create Password</label>
-    <input type="password" id="password" name="password" required minlength="6" />
-
-    <button type="submit">Register & Earn Points</button>
-  </form>
-
-  <div class="login-link">
-    Already registered? <a href="login.html">Sign in</a>
+  <div class="privacy-popup" id="privacyPopup">
+    We use cookies to improve your experience.
+    <button onclick="acceptPrivacy()">Accept</button>
   </div>
 
+  <script>
+    // Auto-scrolling ads
+    let currentIndex = 0;
+    const totalSlides = 3;
+    const adsContainer = document.getElementById("adsContainer");
+    const dots = document.querySelectorAll(".dot");
+
+    function showSlide(index) {
+      adsContainer.style.transform = `translateX(-${index * 100}%)`;
+      dots.forEach(dot => dot.classList.remove("active"));
+      dots[index].classList.add("active");
+    }
+
+    function nextSlide() {
+      currentIndex = (currentIndex + 1) % totalSlides;
+      showSlide(currentIndex);
+    }
+
+    function setSlide(index) {
+      currentIndex = index;
+      showSlide(index);
+    }
+
+    setInterval(nextSlide, 5000); // Auto-scroll every 5 seconds
+
+    // Privacy popup
+    function acceptPrivacy() {
+      document.getElementById("privacyPopup").classList.remove("show");
+      localStorage.setItem("acceptedPrivacy", "yes");
+    }
+
+    if (!localStorage.getItem("acceptedPrivacy")) {
+      document.getElementById("privacyPopup").classList.add("show");
+    }
+
+    // Loyalty form
+    function registerClient(e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const phone = document.getElementById("phone").value;
+      const email = document.getElementById("email").value;
+      alert(`Thank you, ${name}! You're registered for loyalty points.`);
+      e.target.reset();
+    }
+  </script>
 </body>
 </html>
