--- a/register.html
+++ b/register.html
@@ -162,7 +162,7 @@
   </header>
 
   <nav>
-    <a href="#hero">Home</a>
+    <a href="https://kingscutbarber.co.za">Home</a>
     <a href="#register">Promos</a>
     <a href="#register">Loyalty</a>
     <a href="#contact">Contact</a>
