--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
 
 
  <nav id="dropdown-menu">
-  <button id="close-drawer" onclick="toggleMenu()">✖</button>
+  <div class="close-container" onclick="toggleMenu()">
+  <button id="close-drawer">✖</button>
+</div>
   <h2 style="width: 100%; text-align: center; color: white; padding: 15px 0; border-bottom: 1px solid #444; animation: fadeSlideIn 0.6s ease;">Menu</h2>
   <a href="#about" onclick="toggleMenu()">About</a>
   <a href="booking.html" onclick="toggleMenu()">Book Now</a>
