--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@ button, a {
 
 
  <nav id="dropdown-menu">
-  <div class="close-container" onclick="toggleMenu()">
+  <div class="close-container">
+  <button id="close-drawer" onclick="toggleMenu()" role="button" aria-label="Close Menu">✖</button>
+</div>
   <button id="close-drawer">✖</button>
 </div>
   <h2 style="width: 100%; text-align: center; color: white; padding: 15px 0; border-bottom: 1px solid #444; animation: fadeSlideIn 0.6s ease;">Menu</h2>
@@ -453,10 +455,16 @@ button, a {
   right: 15px;
   background: none;
   border: none;
-  font-size: 22px;
+  font-size: 28px;
   color: white;
   cursor: pointer;
   z-index: 1100;
+  padding: 12px; /* Better mobile hit area */
+  line-height: 1;
+}
+
+#close-drawer:hover {
+  transform: scale(1.2);
 }
 #close-drawer:hover {
   transform: scale(1.2);
