--- a/register.html
+++ b/register.html
@@ -164,7 +164,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="#register">Promos</a>
-    <a href="#register">Loyalty</a>
+    <a href="#" onclick="handleLoyaltyClick()">Loyalty</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -278,5 +278,81 @@
       document.getElementById("adsSection").style.display = "block";
     }
   </script>
+  <script>
+  const correctPassword = "cut2025"; // your password
+  const cookieName = "loyaltyAccess";
+
+  function setCookie(name, value, days) {
+    const d = new Date();
+    d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
+    const expires = "expires=" + d.toUTCString();
+    document.cookie = `${name}=${value};${expires};path=/`;
+  }
+
+  function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(';').shift();
+    return "";
+  }
+
+  function handleLoyaltyClick() {
+    const hasAccess = getCookie(cookieName);
+    if (hasAccess === "true") {
+      scrollToRegister();
+    } else {
+      openPasswordModal();
+    }
+  }
+
+  function openPasswordModal() {
+    document.getElementById("passwordModal").style.display = "flex";
+    document.getElementById("loyaltyPassword").value = "";
+    document.getElementById("passwordError").style.display = "none";
+  }
+
+  function closePasswordModal() {
+    document.getElementById("passwordModal").style.display = "none";
+  }
+
+  function checkPassword() {
+    const input = document.getElementById("loyaltyPassword").value;
+    if (input === correctPassword) {
+      setCookie(cookieName, "true", 7); // Remember for 7 days
+      closePasswordModal();
+      scrollToRegister();
+    } else {
+      document.getElementById("passwordError").style.display = "block";
+    }
+  }
+
+  function scrollToRegister() {
+    document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
+  }
+  </script>
+  <!-- Password Prompt Modal -->
+<div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
+  <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
+    <h3>Enter Loyalty Password</h3>
+    <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
+    <div style="display:flex; justify-content:space-between; gap:10px;">
+      <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
+      <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
+    </div>
+    <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
+  </div>
+</div>
+  <!-- Password Prompt Modal -->
+<div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
+  <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
+    <h3>Enter Loyalty Password</h3>
+    <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
+    <div style="display:flex; justify-content:space-between; gap:10px;">
+      <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
+      <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
+    </div>
+    <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
+  </div>
+</div>
 </body>
 </html>
