--- a/register.html
+++ b/register.html
@@ -253,7 +253,7 @@
     const scriptURL = "https://script.google.com/macros/s/AKfycbxt7vdSQ24rlO5WBMgfzoivMfsopJPdkF2_ne4EHNf8pMlpe5JJfjrHw6TFKEBOn0fHPg/exec";
     const form = document.getElementById("loyaltyForm");
 
-    form.addEventListener("submit", e => {
+form.addEventListener("submit", e => {
   e.preventDefault();
   const name = document.getElementById("name").value;
   const phone = document.getElementById("phone").value;
@@ -261,6 +261,28 @@
   const regPassword = document.getElementById("regPassword").value;
 
   const data = { name, phone, email };
+
+  fetch(scriptURL, {
+    method: "POST",
+    body: JSON.stringify(data),
+  })
+  .then(response => {
+    if (response.ok) {
+      alert("Thank you! You are now registered.");
+      localStorage.setItem("registeredClient", "yes");
+      localStorage.setItem("loyaltyPassword", regPassword); // ✅ Save password
+      form.reset();
+      document.getElementById("registerSection").style.display = "none";
+      document.getElementById("adsSection").style.display = "block";
+    } else {
+      alert("Error: Registration failed. Try again.");
+    }
+  })
+  .catch(error => {
+    console.error("Error!", error.message);
+    alert("Could not connect. Please try again.");
+  });
+});
 
   fetch(scriptURL, {
     method: "POST",
@@ -317,7 +339,7 @@
     }
   </script>
   <script>
-  const correctPassword = "cut2025"; // your password
+  
   const cookieName = "loyaltyAccess";
 
   function setCookie(name, value, days) {
@@ -356,7 +378,7 @@
   function checkPassword() {
   const input = document.getElementById("loyaltyPassword").value;
   const savedPassword = localStorage.getItem("loyaltyPassword");
-  
+
   if (input === savedPassword) {
     setCookie(cookieName, "true", 7);
     closePasswordModal();
@@ -364,7 +386,7 @@
   } else {
     document.getElementById("passwordError").style.display = "block";
   }
-  }
+}
 
   function scrollToRegister() {
     document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
